--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "datafixture.js",
-    "version": "0.1.3",
-    "description": "generate mock data objects",
-    "homepage": "https://github.com/acatl/datafixture.js",
-    "author": "Acatl Pacheco <acatl.pacheco@gmail.com>",
-    "license": [{
-            "type": "MIT"
-        }
-    ],
-    "keywords": [
-            "datafixture",
-            "data",
-            "mock",
-            "random",
-            "test",
-            "generate",
-            "json"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/acatl/datafixture.js.git"
-    },
-    "bugs": {
-        "url": "https://github.com/acatl/datafixture.js/issues"
-    },
-    "main": "./datafixture.js",
-    "scripts": {
-        "test": "grunt test"
-    },
-    "devDependencies": {
-        "grunt-contrib-coffee": "^0.11.1",
-        "grunt-contrib-uglify": "~0.2.0",
-        "grunt-contrib-jasmine": "~0.4.2",
-        "grunt-contrib-watch": "^0.6.1"
+  "name": "datafixture.js",
+  "version": "0.1.3",
+  "description": "generate mock data objects",
+  "homepage": "https://github.com/acatl/datafixture.js",
+  "author": "Acatl Pacheco <acatl.pacheco@gmail.com>",
+  "license": [
+    {
+      "type": "MIT"
     }
+  ],
+  "keywords": [
+    "datafixture",
+    "data",
+    "mock",
+    "random",
+    "test",
+    "generate",
+    "json"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/acatl/datafixture.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/acatl/datafixture.js/issues"
+  },
+  "main": "./datafixture.js",
+  "scripts": {
+    "test": "grunt test"
+  },
+  "devDependencies": {
+    "grunt-contrib-coffee": "^0.11.1",
+    "grunt-contrib-jasmine": "^0.8.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "^0.6.1"
+  }
 }
